updated swagger api route descriptions and such
