# routes/index.js
@@ -9,7 +9,4 @@ const myController = require('../controllers');
 
 routes.use("/contacts", require('./contacts'));
 
-routes.get("/", myController.hello);
-routes.get("/names", myController.getNames);
-
 module.exports = routes;
